# logstuff

./: .gitignore  .gitlab-ci.yml  Cargo.toml  schema.sql
.github/workflows/: cargo-audit.yaml  rust.yaml
logstuff/: Cargo.toml
logstuff/src/: event.rs  lib.rs  query.pest  query.rs  serde.rs  tls.rs
qstuff/: CMakeLists.txt
qstuff/src/: CMakeLists.txt  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  percentbardelegate.cpp  percentbardelegate.h  saveviewdialog.cpp  saveviewdialog.h  saveviewdialog.ui  timeinputdialog.cpp  timeinputdialog.h  timeinputdialog.ui  timeinputwidget.ui  timerangemodel.cpp  timerangemodel.h
query/: Cargo.toml
query/benches/: parse.rs
query/src/: ast.rs  c_interface.rs  lib.rs  query.lalrpop
stuffimport/: Cargo.toml  lognorm.rules  rsyslogd.conf  settings.yaml
stuffimport/src/: app.rs  application.rs  cli.rs  config.rs  main.rs  partition.rs
stuffstream/: Cargo.toml  settings.yaml
stuffstream/src/: app.rs  application.rs  cli.rs  config.rs  counts.rs  events.rs  interval.rs  main.rs
stufftail/: Cargo.toml
stufftail/src/: main.rs
stuffweb/: Cargo.toml
stuffweb/src/: main.rs
