[package]
name = "logstuff"
version = "0.1.0"
edition = "2021"

[lib]
name = "logstuff"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
native-tls = "0.2"
time = { version = "0.3", features = ["std", "formatting", "parsing", "serde-human-readable", "macros"] }
log = "0.4"
rustls = "0.20"
rustls-pemfile = "0.2"
webpki-roots = "0.22"

