[package]
name = "logstuff-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "querytest"
path = "src/bin/querytest.rs"

[lib]
name = "logstuff_query"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "parse"
harness = false

[dependencies]
serde_json = "1"
lalrpop-util = "0.19"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
criterion = "0.4"

