[package]
name = "stuffimport"
version = "0.1.0"
edition = "2018"

[dependencies]
logstuff = { path = "../logstuff" }
log = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
clap = "2"
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
typetag = "0.1"
time = { version = "0.3", features = ["formatting"] }

