[package]
name = "stuffimport"
version = "0.1.0"
edition = "2018"

[features]
default = ["humantime"]
humantime = ["env_logger/humantime"]
termcolor = ["env_logger/termcolor"]
atty = ["env_logger/atty"]

[dependencies]
logstuff = { path = "../logstuff" }
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
clap = "2"
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
typetag = "0.1"
time = { version = "0.3", features = ["formatting"] }

