[package]
name = "stuffimport"
version = "0.1.0"
edition = "2021"

[features]
default = ["humantime"]
humantime = ["env_logger/humantime"]
color = ["env_logger/color"]
auto-color = ["env_logger/auto-color"]

[dependencies]
logstuff = { path = "../logstuff" }
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "3", features = ["cargo"] }
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
typetag = "0.2"
time = { version = "0.3", features = ["formatting"] }
lru-cache = "0.1.2"

