[package]
name = "stuffstream"
version = "0.1.0"
edition = "2018"

[dependencies]
logstuff = { path = "../logstuff" }
futures = "0.3"
warp = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
bb8-postgres = "0.7"
log = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
clap = "2"
time = { version = "0.3", features = ["serde-human-readable", "macros"] }

