[package]
name = "stufftail"
version = "0.1.0"
edition = "2018"

[dependencies]
logstuff = { path = "../logstuff" }
serde_json = "1"
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
log = "0.4"
env_logger = "0.9"
clap = "2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

