[package]
name = "stufftail"
version = "0.1.0"
edition = "2021"

[features]
default = ["humantime"]
humantime = ["env_logger/humantime"]
termcolor = ["env_logger/termcolor"]
atty = ["env_logger/atty"]

[dependencies]
logstuff = { path = "../logstuff" }
logstuff-query = { path = "../query" }
serde_json = "1"
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
log = "0.4"
env_logger = { version = "0.9", default-features = false }
clap = "2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

