[package]
name = "stufftail"
version = "0.1.0"
edition = "2021"
description = "Poll for new entries in logstuff's database."

[features]
default = ["humantime"]
humantime = ["env_logger/humantime"]
color = ["env_logger/color"]
auto-color = ["env_logger/auto-color"]

[dependencies]
logstuff = { path = "../logstuff" }
logstuff-query = { path = "../query" }
serde_json = "1"
postgres = { version = "0.19", features = ["with-time-0_3", "with-serde_json-1"] }
postgres-native-tls = "0.5"
log = "0.4"
env_logger = { version = "0.10", default-features = false }
clap = { version = "4", features = ["cargo", "derive"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

