[package]
name = "stuffweb"
version = "0.1.0"
edition = "2018"

[dependencies]
logstuff = { path = "../logstuff" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
chrono = "0.4"
rouille = "3"
log = "0.4"

